# serializer version: 1
# name: test_code_version_multiple_fields
  'f73ebda5b15e6a435a336e19fb7a9a6e7e2af79da7374b0fab08e4d0f2527f31'
# ---
# name: test_code_version_single_field
  '08d017a7f6a485735df6022f51f5b4a9c0b6fc3f0d4be1a2ead8bf9135a99993'
# ---
